--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "parse":"nearleyc grammar.ne -o grammar.js",
+    "test": "echo \"E rror: no test specified\" && exit 1"
   },
   "keywords": [],
   "author": "",
